# mar2a

./: CMakeLists.txt  README.md
include/ast/: ast_expression.h  ast_factor.h  ast_function.h  ast_identifier.h  ast_node.h  ast_program.h  ast_return.h  ast_statement.h  ast_type.h
include/driver/: driver.h
include/ir/: ir_binary_op.h  ir_const_int.h  ir_function.h  ir_module.h  ir_node.h  ir_return.h  ir_type.h  ir_unary_op.h  ir_value.h
include/lexer/: lexer.h  token.h
include/llvm/: llvm_visitor.h
include/parser/: parser.h
src/: CMakeLists.txt  mar2a.cpp
src/ast/: CMakeLists.txt  ast_expression.cpp  ast_factor.cpp  ast_function.cpp  ast_identifier.cpp  ast_program.cpp  ast_return.cpp  ast_statement.cpp  ast_type.cpp
src/driver/: CMakeLists.txt  driver.cpp
src/ir/: CMakeLists.txt  ir_binary_op.cpp  ir_const_int.cpp  ir_function.cpp  ir_module.cpp  ir_node.cpp  ir_return.cpp  ir_type.cpp  ir_unary_op.cpp  ir_value.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
src/llvm/: CMakeLists.txt  llvm_visitor.cpp
src/parser/: CMakeLists.txt  parser.cpp
test/: lexer_tests.cpp  parser_tests.cpp
test/source_codes/: 0002.c  0003.c
